--- a/frontend/src/css/SlideMenu.css
+++ b/frontend/src/css/SlideMenu.css
@@ -19,7 +19,7 @@
 .slide-menu {
     position: fixed;
     top: 0;
-    left: -70%;
+    left: -100%;
     width: 70%;
     height: 100%;
     background-color: #000607;
